# sdf-trees

./: .gitignore  CMakeLists.txt  CMakeListsDocker.txt  CMakePresets.json  Dockerfile  GameState.h  UseImGui.cpp  UseImGui.h  createAppImage.sh  main.cpp  vcpkg.json
World/: Cube.cpp  Cube.h  CustomModel.cpp  CustomModel.h  Mesh.cpp  Mesh.h  Terrain.cpp  Terrain.h  Tree.cpp  Tree.h  Vertex.h
assets/models/: tree_a.mtl  tree_b.mtl  tree_c.mtl
demo.AppDir/: AppRun  demo.desktop
engine/: Camera.cpp  Camera.h  Mesh.h  Program.cpp  Program.h  ShaderCode.cpp  ShaderCode.h
shaders/: compShader.glsl  fragShader.glsl  testFragShader.glsl  testVertShader.glsl  treeVertShader.glsl  vertShader.glsl
